--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.3.1
 defusedxml==0.7.0rc1
+dj-database-url==0.5.0
 Django==3.1.4
 django-templated-mail==1.1.1
 djangorestframework==3.12.2
@@ -17,6 +18,7 @@ itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
+Pillow==8.0.1
 pycparser==2.20
 PyJWT==1.7.1
 python3-openid==3.2.0
@@ -29,4 +31,5 @@ social-auth-core==3.3.3
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.2
+whitenoise==5.2.0
 
