--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==3.3.1
 defusedxml==0.7.0rc1
 dj-database-url==0.5.0
 Django==3.1.4
+django-heroku==0.3.1
 django-templated-mail==1.1.1
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
@@ -19,6 +20,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 Pillow==8.0.1
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
