--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==3.3.1
 defusedxml==0.7.0rc1
 dj-database-url==0.5.0
 Django==3.1.4
+django-cors-headers==3.6.0
 django-heroku==0.3.1
 django-templated-mail==1.1.1
 djangorestframework==3.12.2
@@ -35,4 +36,3 @@ sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.2
 whitenoise==5.2.0
-
